--- a/Win_Api_Eduction/Win_Api_Eduction/Win_Api_Eduction.vcxproj
+++ b/Win_Api_Eduction/Win_Api_Eduction/Win_Api_Eduction.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="test.cpp" />
     <ClCompile Include="Winapicpp.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
