--- a/Win_Api_Eduction/Win_Api_Eduction/Win_Api_Eduction.vcxproj.filters
+++ b/Win_Api_Eduction/Win_Api_Eduction/Win_Api_Eduction.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="test.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="fonction.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
